--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
 <html ng-app="mqplan">
 <head>
    <meta charset="UTF-8">
-   <title>Live Feed</title>
+   <title>MQPlan</title>
    <script src="./js/jquery.min.js"></script>
    <script src="./js/angular.min.js"></script>
    <script src="./js/d3.v3.min.js"></script>
@@ -12,15 +12,12 @@
    <script src="./js/charts/shortagechart.js"></script>
 
    <script src="./js/mqplan.js"></script>
+   <link rel='stylesheet' href='./css/mqplan.css'>
 </head>
 
 <body>
 
    <div ng-controller="MQPlanCtrl">
-      <ul>
-              <li>{{selected}}</li>
-      </ul>
-
       <div id="main-content">
          <h2>{{ title }}</h2>
          <div teamcharts></div>
